syntax = "proto3";

package core.v1;
option go_package = "github.com/deni12345/dae-services/proto/gen/corev1;corev1";

service HealthService {
  rpc CheckHealth(HealthCheckReq) returns (HealthCheckResp);
}

message HealthCheckReq {}

message HealthCheckResp {
  string message = 1;
}
